final commit - added swagger ui docs
